Fix input and textarea right alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ textarea {
 /* Main Field, Dropdown, Comment box */
 .form-control {
   display: block;
+  box-sizing: border-box;
   padding: .375rem 0rem .375rem .75rem;
   width: 100%;
   border: 1px solid #ced4da;
